<?xml version="1.0"?>
<package format="3">
    <name>odri_master_board_sdk</name>
    <version>1.0.6</version>
    <description>
        This project contains the sdk for the communication between a computer
        and the master-board
    </description>
    <maintainer email="mnaveau@tue.mpg.de">Maximilien Naveau</maintainer>
    <maintainer email="ostasse@laas.fr">Olivier Stasse</maintainer>
    <maintainer email="gsaurel@laas.fr">Guilhem Saurel</maintainer>
    <license>BSD 3-Clause</license>

    <buildtool_depend>cmake</buildtool_depend>

    <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
    <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>
    <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
    <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
    <depend condition="$ROS_PYTHON_VERSION == 3">libboost-python-dev</depend>

    <test_depend>catch2</test_depend>
    
    <depend>git</depend>
    <export>
      <build_type>cmake</build_type>
    </export>
</package>
